# Video-data-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose-kafka.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  sync-datalake-files.py
chop assignment/: pyproject.toml
chop assignment/datalake/explore/: 02_video.py  03_video_derivate.py  04_kafka.py
config/: airflow.cfg
dags/: 00_airflow_dag.py  01_kafka_listener_dag.py
datalake/: 00_airflow_dag.py  01_dag.py  02_producer.py  03_consumer.py  common_func.py  producer.py
datalake/bronze-layer/: 02_sink.py
datalake/bronze_layer/: 01_dag.py  02_sink.py
datalake/explore/: 00_exp.py  01_mail.py  02_video.py  03_video_derivate.py  video_pipeline.db
datalake/gold-layer/: 01_dag.py  02_create_schema.py  03_export_to_postgres.py  04_email.py  gold_common.py
datalake/gold_layer/: 01_dag.py  02_create_schema.py  03_export_to_postgres.py  04_email.py  gold_common.py
datalake/silver-layer/: 01_dag.py  02_video_check.py  03_derivative.py  03_video_process.py  04_export_to_db.py  05_update_video_data.py  silver_common.py
datalake/silver_layer/: 01_dag.py  02_video_check.py  03_derivative.py  05_update_video_data.py  silver_common.py
plugins/: kafka_consumer.py
